--- a/src/Warehouse.Client/Components/Shipments/ShipmentTable.razor
+++ b/src/Warehouse.Client/Components/Shipments/ShipmentTable.razor
@@ -1,4 +1,5 @@
-﻿@using Warehouse.Shared.DTO
+﻿@using Warehouse.Shared
+@using Warehouse.Shared.DTO
 @inject NavigationManager Nav
 
 <MudTable T="ShipmentDocumentDTO" Items="Shipments" Dense="true" Hover="true" OnRowClick="e => OnRowClick.InvokeAsync(e.Item.Id)">
@@ -18,7 +19,26 @@
 	    <MudTd DataLabel="Номер">@context.Number</MudTd>
 	    <MudTd DataLabel="Дата">@context.Date.ToString("yyyy-MM-dd")</MudTd>
 	    <MudTd DataLabel="Клиент">@context.Client.Name</MudTd>
-	    <MudTd DataLabel="Статус">@context.Status</MudTd>
+	    <MudTd DataLabel="Статус">
+		    @if (context.Status == ShipmentStatus.Signed)
+		    {
+				<MudChip T="ShipmentStatus"
+						 Variant="Variant.Filled"
+			             Color="Color.Success"
+			             Disabled="true">
+				    Подписан
+			    </MudChip>
+		    }
+		    else
+		    {
+				<MudChip T="ShipmentStatus"
+						 Variant="Variant.Filled"
+			             Color="Color.Default"
+			             Disabled="true">
+				    Не подписан
+			    </MudChip>
+		    }
+	    </MudTd>
         <MudTd DataLabel="Ресурс">@((MarkupString)string.Join("<br/>", visibleItems.Select(i => i.Resource.Name)))</MudTd>
         <MudTd DataLabel="Ед. изм.">@((MarkupString)string.Join("<br/>", visibleItems.Select(i => i.Unit.Name)))</MudTd>
         <MudTd DataLabel="Кол-во">@((MarkupString)string.Join("<br/>", visibleItems.Select(i => i.Quantity)))</MudTd>
