--- a/src/Warehouse.Client/Pages/ClientForm.razor
+++ b/src/Warehouse.Client/Pages/ClientForm.razor
@@ -10,11 +10,11 @@
           ReturnUrl="/clients"
           LoadFunc="async id => await Api.GetClient(id).ContinueWith(t => (t.Result.Result, t.Result.Response))"
           SaveFunc="async dto => (Id == Guid.Empty
-                                                     ? (await Api.CreateClient(dto)).Result
-                                                     : (await Api.UpdateClient(dto)).Result)"
-          DeleteFunc="async id => (await Api.DeleteClient(id)).Result"
-          ArchiveFunc="async id => (await Api.ArchiveClient(id)).Result"
-          UnarchiveFunc="async id => (await Api.UnarchiveClient(id)).Result">
+                                                     ? (await Api.CreateClient(dto))
+                                                     : (await Api.UpdateClient(dto)))"
+          DeleteFunc="async id => (await Api.DeleteClient(id))"
+          ArchiveFunc="async id => (await Api.ArchiveClient(id))"
+          UnarchiveFunc="async id => (await Api.UnarchiveClient(id))">
     <Template Context="model">
         <MudTextField Label="Наименование" @bind-Value="model.Name" />
         <MudTextField Label="Адрес" @bind-Value="model.Address" />
