--- a/src/Warehouse.Client/Pages/ResourceForm.razor
+++ b/src/Warehouse.Client/Pages/ResourceForm.razor
@@ -10,11 +10,11 @@
           ReturnUrl="/resources"
           LoadFunc="async id => await Api.GetResource(id).ContinueWith(t => (t.Result.Result, t.Result.Response))"
           SaveFunc="async dto => (Id == Guid.Empty
-                                                     ? (await Api.CreateResource(dto)).Result
-                                                     : (await Api.UpdateResource(dto)).Result)"
-          DeleteFunc="async id => (await Api.DeleteResource(id)).Result"
-          ArchiveFunc="async id => (await Api.ArchiveResource(id)).Result"
-          UnarchiveFunc="async id => (await Api.UnarchiveResource(id)).Result">
+                                                     ? (await Api.CreateResource(dto))
+                                                     : (await Api.UpdateResource(dto)))"
+          DeleteFunc="async id => (await Api.DeleteResource(id))"
+          ArchiveFunc="async id => (await Api.ArchiveResource(id))"
+          UnarchiveFunc="async id => (await Api.UnarchiveResource(id))">
     <Template Context="model">
         <MudTextField Label="Наименование" @bind-Value="model.Name" />
     </Template>
